# TournamentMod

./: .gitignore  CMakeLists.txt  mod.json
include/: ConnectionLabel.hpp  LoadLevelPopup.hpp  LoginPopup.hpp  MessageHandler.hpp  NetworkManager.hpp  PointsManager.hpp  hooks.hpp
server/: cliClient.py  points.db  server.py
src/: ConnectionLabel.cpp  LoadLevelPopup.cpp  LoginPopup.cpp  MessageHandler.cpp  NetworkManager.cpp  PointsManager.cpp  main.cpp
streamoverlay/: index.html
